--- a/login.html
+++ b/login.html
@@ -3,76 +3,141 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>login/register</title>
+    <title>登录|注册</title>
     <link rel="stylesheet" href="./font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./login.css">
+
 </head>
 
 <body>
     <header>
-        <a href="#" class="user">
-            <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-        </a>
+        <a class="login" href="#"><i class="fa fa-user-circle"></i></a>
     </header>
     <main>
-        <div class="layout">
-            <div class="login">
-                <div class="tab">
-                    <a href="#" class="modal log">登陆</a>
-                    <a href="#" class="modal reg">注册</a>
-                    <a href="#">
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                    </a>
+        <div class="flip-modal login">
+            <div class="modal modal-login">
+                <a class="close" href="#"><i class="fa fa-close"></i></a>
+                <div class="tabs">
+                    <a class="login active" href="#">登录</a>
+                    <a class="register" href="#">注册</a>
                 </div>
-                <form action="#" method="post">
-                    <div class="container">
-                        <i class="fa fa-user-o" aria-hidden="true"></i>
-                        <input type="text" name="username" placeholder="用户名">
-                    </div>
-                    <div class="container">
-                        <i class="fa fa-lock" aria-hidden="true"></i>
-                        <input type="password" name="username" placeholder="密码">
-                    </div>
-                    <div class="container-sub">
-                        <input type="submit" value="登陆" class="sub">
-                    </div>
-                </form>
+                <div class="content">
+                    <div class="errormsg"></div>
+                    <form action="/login" method="post">
+                        <div class="input-field">
+                            <i class="fa fa-user-o"></i>
+                            <input name="username" type="text" placeholder="用户名">
+                        </div>
+                        <div class="input-field">
+                            <i class="fa fa-lock"></i>
+                            <input name="password" type="password" placeholder="密码">
+                        </div>
+                        <div class="input-field">
+                            <input type="submit" value="登录">
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="modal modal-register">
+                <a class="close fa fa-close" href="#"></a>
+                <div class="tabs">
+                    <a class="login" href="#">登录</a>
+                    <a class="register active" href="#">注册</a>
+                </div>
+                <div class="content">
+                    <div class="errormsg"></div>
+                    <form action="/register" method="post">
+                        <div class="input-field">
+                            <i class="fa fa-user-o"></i>
+                            <input name="username" type="text" placeholder="输入用户名">
+                        </div>
+                        <div class="input-field">
+                            <i class="fa fa-lock"></i>
+                            <input name="password" type="password" placeholder="输入密码">
+                        </div>
+                        <div class="input-field">
+                            <i class="fa fa-lock"></i>
+                            <input name="password2" type="password" placeholder="再次输入密码">
+                        </div>
+                        <div class="input-field">
+                            <input type="submit" value="注册">
+                        </div>
+                    </form>
+                </div>
             </div>
         </div>
-        <div class="layout">
-            <div class="register">
-                <div class="tab-reg">
-                    <a href="#" class="modal log">登陆</a>
-                    <a href="#" class="modal reg">注册</a>
-                    <a href="#">
-                        <i class="fa fa-times" aria-hidden="true"></i>
-                    </a>
-                </div>
-                <form action="#" method="post">
-                    <div class="container">
-                        <i class="fa fa-user-o" aria-hidden="true"></i>
-                        <input type="text" name="username" placeholder="用户名">
-                    </div>
-                    <div class="container">
-                        <i class="fa fa-lock" aria-hidden="true"></i>
-                        <input type="password" name="username" placeholder="密码">
-                    </div>
-                    <div class="container">
-                        <i class="fa fa-lock" aria-hidden="true"></i>
-                        <input type="password" name="username" placeholder="再次输入密码">
-                    </div>
-                    <div class="container-sub">
-                        <input type="submit" value="注册" class="sub">
-                    </div>
-                </form>
-            </div>
-        </div>
-        </div>
-    </main>
-    <script>
 
+    </main>
+
+    <script>
+        function $(selector) {
+            return document.querySelector(selector);
+        }
+
+        function $$(selector) {
+            return document.querySelectorAll(selector);
+        }
+
+        $('header .login').onclick = function (e) {
+            e.stopPropagation();
+            $('.flip-modal').style.display = 'block';
+        }
+
+        $('.flip-modal').addEventListener('click', function (e) {
+            e.stopPropagation();
+            if (e.target.classList.contains('login')) {
+                $('.flip-modal').classList.remove('register');
+                $('.flip-modal').classList.add('login');
+            }
+            if (e.target.classList.contains('register')) {
+                $('.flip-modal').classList.add('register');
+                $('.flip-modal').classList.remove('login');
+            }
+            console.log(e.target);
+            console.log(this);
+            window.target = e.target;
+            if (e.target.classList.contains('close')) {
+                $('.flip-modal').style.display = 'none';
+            }
+        });
+
+        document.addEventListener('click', function () {
+            $('.flip-modal').style.display = 'none';
+        });
+
+        $('.modal-login form').addEventListener('submit', function (e) {
+            e.preventDefault();
+            if (!/^\w{3,8}$/.test($('.modal-login input[name=username]').value)) {
+                $('.modal-login .errormsg').innerText = '用户名需输入3-8个字符，包括字母数字下划线';
+                return false;
+            }
+            if (!/^\w{6,10}$/.test($('.modal-login input[name=password]').value)) {
+                $('.modal-login .errormsg').innerText = '密码需输入6-10个字符，包括字母数字下划线';
+                return false;
+            }
+            this.submit();
+        })
+
+        $('.modal-register form').addEventListener('submit', function (e) {
+            e.preventDefault();
+            if (!/^\w{3,8}$/.test($('.modal-register input[name=username]').value)) {
+                $('.modal-register .errormsg').innerText = '用户名需输入3-8个字符，包括字母数字下划线';
+                return false;
+            }
+            if (/^hunger$|^ruoyu$/.test($('.modal-register input[name=username]').value)) {
+                $('.modal-register .errormsg').innerText = '用户名已存在';
+                return false;
+            }
+            if (!/^\w{6,10}$/.test($('.modal-register input[name=password]').value)) {
+                $('.modal-register .errormsg').innerText = '密码需输入6-10个字符，包括字母数字下划线';
+                return false;
+            }
+            if ($('.modal-register input[name=password]').value !== $('.modal-register input[name=password2]').value) {
+                $('.modal-register .errormsg').innerText = '两次输入的密码不一致';
+                return false;
+            }
+            this.submit();
+        })
     </script>
 </body>
 
